docs/versioned_docs/version-5.6/configuration/hooks/basics.mdx
---
title: Hooks
sidebar_label: hooks
---

DevSpace allows you to define execution of custom commands during certain lifecycle events. This makes it possible to customize the deployment and development process with DevSpace.

Hooks can be defined in the `hooks` section of `devspace.yaml`:
```yaml
hooks:
- command: echo
  args:
    - before image building
  when:
    before:
      images: all
```

:::note Example Project
For a complete example take a look at [this example project on GitHub](https://github.com/devspace-cloud/devspace/tree/master/examples/hooks).
:::

This tells DevSpace to execute the command `echo before image building` before any image will be built. You are able to define hooks for the following life cycle events:
- **before pull secret creation**: Will be executed before creating any image pull secrets. Value: `when.before.pullSecrets: all`
- **after pull secret creation**: Will be executed after image pull secrets have been successfully created. Value: `when.after.pullSecrets: all`
- **before dependency deployment**: Will be executed before deploying any dependencies. Value: `when.before.dependencies: all`
- **after dependency deployment**: Will be executed after dependencies have been successfully deployed. Value: `when.after.dependencies: all`
- **before image building**: Will be executed before building any images. Value: `when.before.images: all`
- **after image building**: Will be executed after images have been successfully built. Value: `when.after.images: all`
- **before certain image building**: Will be executed before a certain image is built.  Value: `when.before.images: my-image`
- **after certain image building**: Will be executed after a certain image is built.  Value: `when.after.images: my-image`
- **before deploying**: Will be executed before any deployment is deployed. Value: `when.before.deployments: all`
- **after deploying**: Will be executed after all deployments are deployed. Value: `when.after.deployments: all`
- **before certain deployment**: Will be executed before a certain deployment is deployed.  Value: `when.before.deployments: my-deployment`
- **after certain deployment**: Will be executed after a certain deployment is deployed.  Value: `when.after.deployments: my-deployment`

:::info Errors in Hooks
If any hook returns a non zero exit code, DevSpace will abort and print an error message.
:::

## Execute hooks if an error occured

DevSpace allows you to execute hooks after certain steps have failed:
- **pull secret creation**: Will be executed if creating image pull secrets fails. Value: `when.onError.pullSecrets: all`
- **dependency deployment**: Will be executed if deploying any dependencies fail. Value: `when.onError.dependencies: all`
- **image building**: Will be executed if building any images fails. Value: `when.onError.images: all`
- **deploying**: Will be executed if any deployment fails. Value: `when.onError.deployments: all`
- **certain deployment**: Will be executed if a certain deployment fails.  Value: `when.onError.deployments: my-deployment`

The actual error will be passed to the hook via the environment variable `DEVSPACE_HOOK_ERROR`. For example:
```yaml
# This will print the error to the console that has occured during a deployment
hooks:
- command: "sh"
  os: linux,darwin
  args: 
  - -c
  - 'echo "The following error has occured: $DEVSPACE_HOOK_ERROR"'
  when:
    onError:
      deployments: all
```

## Execute hooks in a container

DevSpace allows you to execute commands directly in a container instead of the local system. You can specify this in the `where` section of the hook:

```yaml
...
hooks:
- command: "echo"
  args: ["Hello from within the container!"]
  where: 
    container:
      imageName: default
      # Or select via labelSelector etc.
      # labelSelector: ...
      # namespace: ...
      # containerName: ...
      # pod: ...
  when:
    after:
      deployments: my-deployment
...
```

By default, DevSpace will wait for all pods / containers that were selected with the given selector to come up. As soon as all targets are running, DevSpace will execute the hook and wait for it to finish. You can define if DevSpace should wait and how long it should wait with `wait` and `timeout`:

```yaml
...
hooks:
- command: "echo"
  args: ["Hello from within the container!"]
  where: 
    container:
      imageName: default
      # Or select via labelSelector etc.
      # labelSelector: ...
      # namespace: ...
      # containerName: ...
      # pod: ...
      wait: true   # This is the default
      timeout: 300 # Timeout in seconds
  when:
    after:
      deployments: my-deployment
...
```

## Execute hooks in the background

By default, DevSpace will wait for a hook to finish and then move on with the pipeline. However, in some cases it might be desired that a hook is executed in the background to speed up a process. You can specify a background hook with the `background` option:

```yaml
...
hooks:
- command: "sh"
  args: ["-c", "sleep 10 && echo 'Hello, I was run inside the background!'"]
  background: true
  when:
    after:
      deployments: all
...
```

If you do not want to stream the output of the hook to the console, you can also mark the hook as silent, which will prevent any hook output:
```yaml
...
hooks:
- command: "sh"
  args: ["-c", "sleep 10 && echo 'Hello, I was run inside the background!'"]
  background: true
  silent: true
  when:
    after:
      deployments: all
...
```

## Execute hooks only on certain operating systems

Hooks can be executed only on certain operating systems:

```yaml {5,12}
hooks:
- command: echo
  args:
    - before image building on windows
  os: windows
  when:
    before:
      images: all
- command: echo
  args:
    - before image building on mac and linux
  os: darwin,linux
  when:
    before:
      images: all
```

## Hook Context Information

DevSpace passes certain environment variables to the hook execution:
- **DEVSPACE_HOOK_KUBE_CONTEXT**: the name of the kube context that was used
- **DEVSPACE_HOOK_KUBE_NAMESPACE**: the name of the kube namespace that was used
- **DEVSPACE_HOOK_OS_ARGS**: json encoded os.Args that were used to call devspace
- **DEVSPACE_HOOK_ERROR**: if an error has occured contains the error string (only for onError hooks)
